--- a/practice/appsettings.json
+++ b/practice/appsettings.json
@@ -3,7 +3,7 @@
     "Key": "bbdguddjhvufdhdshdkdhv67vbhbvbjvjvnjjdfhvjfvjfvnjn",
     "Issuer": "https://localhost:7141/",
     "Audience": " https://localhost:7141/"
-},
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -26,5 +26,12 @@
         "Name": "Console"
       }
     ]
-  }
+}
+//"Kafka": {
+//  "BootstrapServers": "localhost:9092",
+//  "Topic": "test-topic",
+//  "GroupId": "test-group",
+//  "AutoOffsetReset": "Earliest"
+//},
+//"InputFile": "sample.json"
 }
