--- a/practice/appsettings.json
+++ b/practice/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Jwt": {
-    "Key": "bbdguddjhvufdhdshdkdhv67vbhbvbjvjvnjjdfhvjfvjfvnjn",
+    "Key": "",
     "Issuer": "https://localhost:7141/",
     "Audience": " https://localhost:7141/"
   },
